--- a/models/dbt_stg/Source.yml
+++ b/models/dbt_stg/Source.yml
@@ -7,4 +7,13 @@ sources:
 
     tables:
       - name: CUSTOMERS
-    
+
+  - name: datafeed_shared_schema_dev
+    database: "{{('sales')}}"
+    schema: dev
+
+    tables:
+      - name: RAW_LINEITEM
+      - name: RAW_ORDER
+      - name: RAW_CUSTOMER
+      - name: RAW_NATION
